--- a/web/scss/_vesc-log.scss
+++ b/web/scss/_vesc-log.scss
@@ -43,6 +43,8 @@
   .vesc-log-chart-container {
 
     .chart-filters-container {
+      padding: 12px;
+
       .filter-row {
         padding: 6px 0;
       }
